--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,6 @@ section:not(:first-child) {
 }
 
 .socials-item {
-  padding-bottom: 32px;
 }
 
 .socials-link {
@@ -409,6 +408,12 @@ section:not(:first-child) {
   border-bottom: 1px solid rgb(231, 233, 252);
   border-left: 1px solid rgb(231, 233, 252);
   padding: 32px 16px;
+}
+
+.portfolio .card:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-subheader {
