--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ section:not(:first-child) {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition-property: color, background, box-shadow;
+  transition-property: color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -166,7 +166,7 @@ section:not(:first-child) {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition-property: color, background, box-shadow;
+  transition-property: color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -185,7 +185,7 @@ section:not(:first-child) {
 }
 
 .hero {
-  width: 1440рх;
+  max-width: 1440рх;
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -193,6 +193,8 @@ section:not(:first-child) {
     ),
     url(/goit-markup-hw-04/images/hero.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   padding: 188px 0;
 }
 
@@ -225,7 +227,7 @@ section:not(:first-child) {
   letter-spacing: 0.04em;
   cursor: pointer;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  transition-property: color, background, box-shadow;
+  transition-property: color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -251,6 +253,10 @@ section:not(:first-child) {
 }
 
 .features-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   position: relative;
   width: 264px;
   height: 112px;
@@ -340,15 +346,20 @@ section:not(:first-child) {
 }
 
 .socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  display: block;
   width: 40px;
   height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
+  transition-property: color;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-link:hover {
+.socials-link:hover,
+.socials-link:focus {
   background-color: #404bbf;
 }
 
@@ -376,6 +387,8 @@ section:not(:first-child) {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  transform: box-shadow;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
@@ -412,6 +425,10 @@ section:not(:first-child) {
   line-height: 24px;
   letter-spacing: 0.02;
 }
+
+/* .overlay-text:hover {
+  transform: translatey(0);
+} */
 
 .portfolio .card {
   border-right: 1px solid rgb(231, 233, 252);
