--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,7 @@ section:not(:first-child) {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition-property: color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-link.current {
@@ -166,8 +165,7 @@ section:not(:first-child) {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition-property: color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-link:hover,
@@ -185,7 +183,8 @@ section:not(:first-child) {
 }
 
 .hero {
-  max-width: 1440рх;
+  max-width: 1440px;
+  margin: 0 auto;
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -227,8 +226,7 @@ section:not(:first-child) {
   letter-spacing: 0.04em;
   cursor: pointer;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  transition-property: color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -354,8 +352,7 @@ section:not(:first-child) {
   height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
-  transition-property: color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover,
@@ -467,7 +464,11 @@ section:not(:first-child) {
 
 .footer .container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
+}
+
+.footer-left {
+  margin-right: 120px;
 }
 
 .logo .logo-footer {
@@ -494,7 +495,8 @@ section:not(:first-child) {
   gap: 16px;
 }
 
-.footer .socials-link:hover {
+.footer .socials-link:hover,
+.footer .socials-link:focus {
   background-color: #31d0aa;
 }
 
