--- a/css/styles.css
+++ b/css/styles.css
@@ -384,28 +384,33 @@ section:not(:first-child) {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  transform: box-shadow;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  transform: translatey(0);
 }
 
 .box {
   position: relative;
-  width: 360px;
-  height: 300px;
   overflow: hidden;
 }
 
 .overlay {
   position: absolute;
   top: 0;
-  left: 0;
+
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+
+  padding: 40px 32px;
   height: 100%;
+  width: 100%;
 
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -413,14 +418,6 @@ section:not(:first-child) {
 
 .portfolio-item:hover .overlay {
   transform: translatey(0);
-  background-color: #4d5ae5;
-}
-.overlay-text {
-  margin: auto 32px;
-  margin-top: 40px;
-  color: #f4f4fd;
-  line-height: 24px;
-  letter-spacing: 0.02;
 }
 
 /* .overlay-text:hover {
